--- a/notebooks/modelgeneration_27092023_ricalanis.ipynb
+++ b/notebooks/modelgeneration_27092023_ricalanis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "9de64c0d-889e-483d-9921-25cbe60cedf4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "45a2377a-c148-44d4-b936-800d57362bcb",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
+   "id": "48849a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   CreditScore      10000 non-null  int64  \n",
+      " 1   Geography        10000 non-null  object \n",
+      " 2   Gender           10000 non-null  object \n",
+      " 3   Age              10000 non-null  int64  \n",
+      " 4   Tenure           10000 non-null  int64  \n",
+      " 5   Balance          10000 non-null  float64\n",
+      " 6   NumOfProducts    10000 non-null  int64  \n",
+      " 7   HasCrCard        10000 non-null  int64  \n",
+      " 8   IsActiveMember   10000 non-null  int64  \n",
+      " 9   EstimatedSalary  10000 non-null  float64\n",
+      " 10  Exited           10000 non-null  int64  \n",
+      "dtypes: float64(2), int64(7), object(2)\n",
+      "memory usage: 859.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "e6e35832-17f4-43b3-adcc-5de303725f8d",
    "metadata": {},
    "outputs": [
@@ -189,7 +224,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,8 +234,49 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "939eea25",
+   "metadata": {},
+   "source": [
+    "Manejo de datos nulos: no hay datos nulos. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "id": "5227fa27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "3da27622-b70d-45bb-9efb-bd94bd4fb0a7",
    "metadata": {},
    "outputs": [],
@@ -216,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertimos los datos en formato categorico, para más info: shorturl.at/y0269\n",
+    "# Convertimos a numéricos los datos categóricos. Para más info: shorturl.at/y0269\n",
     "column_equivalence = {}\n",
     "features = list(data.columns)\n",
     "for i, column in enumerate(list([str(d) for d in data.dtypes])):\n",
@@ -352,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
