escalamiento de datos

--- a/notebooks/modelgeneration_27092023_ricalanis.ipynb
+++ b/notebooks/modelgeneration_27092023_ricalanis.ipynb
@@ -494,7 +494,16 @@
    "id": "6196fb22",
    "metadata": {},
    "source": [
-    "ANÁLISIS DE CORRELACIÓN: Análizamos la relación entre las variablers para establecer las posibles relaciones lineales. "
+    "# ANÁLISIS DE CORRELACIÓN: "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4870c2e2",
+   "metadata": {},
+   "source": [
+    "Análizamos la relación entre las variablers para establecer las posibles relaciones lineales. \n"
    ]
   },
   {
@@ -538,6 +547,355 @@
    "source": [
     "Conclusión: Exited está a la derecha. Tiene correlación de 1 consigo misma porque la relación es totalmente direta. Las variables inmediatamente a la izquierda, como la edad, el valance y la geografía son las que tienen una relación directa mayor. "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a6fd494c",
+   "metadata": {},
+   "source": [
+    "# Escalabilidad de los datos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "683a8897",
+   "metadata": {},
+   "source": [
+    "Llevamos los datos a la misma escala para que sea más fácil para el algoritmo entender cómo manejarlos. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c8bec27e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "72554eec",
+   "metadata": {},
+   "source": [
+    "creamos una nueva variable, un nuevo dataset escalado trabajado con el scaler:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9fb3ce04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "df_data_processing_scaled =  scaler.fit_transform(data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8eb1c0f6",
+   "metadata": {},
+   "source": [
+    "el df_data_processing_scaled nos llega como un array. Tenemos que convertirlo a un df de la siguiente manera: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0f202e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_data_processing_scaled = pd.DataFrame(df_data_processing_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0c0fcc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.538</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.324324</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.506735</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.516</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.310811</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.334031</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.562709</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.304</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.324324</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.636357</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.569654</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0    1    2         3    4         5         6    7    8         9    10\n",
+       "0  0.538  0.0  0.0  0.324324  0.2  0.000000  0.000000  1.0  1.0  0.506735  1.0\n",
+       "1  0.516  1.0  0.0  0.310811  0.1  0.334031  0.000000  0.0  1.0  0.562709  0.0\n",
+       "2  0.304  0.0  0.0  0.324324  0.8  0.636357  0.666667  1.0  0.0  0.569654  1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data_processing_scaled.head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5c44d258",
+   "metadata": {},
+   "source": [
+    "El df resultante no tiene el nombre de las columnas. Para recuperar el nombre de las columnas hacemos la igualación para utilizar las columnas del df_data_processing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "206d4300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_data_processing_scaled.columns = data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "689a60d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.538</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.324324</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.506735</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.516</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.310811</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.334031</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.562709</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.304</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.324324</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.636357</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.569654</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CreditScore  Geography  Gender       Age  Tenure   Balance  NumOfProducts  \\\n",
+       "0        0.538        0.0     0.0  0.324324     0.2  0.000000       0.000000   \n",
+       "1        0.516        1.0     0.0  0.310811     0.1  0.334031       0.000000   \n",
+       "2        0.304        0.0     0.0  0.324324     0.8  0.636357       0.666667   \n",
+       "\n",
+       "   HasCrCard  IsActiveMember  EstimatedSalary  Exited  \n",
+       "0        1.0             1.0         0.506735     1.0  \n",
+       "1        0.0             1.0         0.562709     0.0  \n",
+       "2        1.0             0.0         0.569654     1.0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data_processing_scaled.head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "60a25838",
+   "metadata": {},
+   "source": [
+    "## Análisis exploratorio de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fbb2644",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "549b274a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "99faa6f5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5e481a4b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cd29a1e2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "254e2a7f",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
