paso de variables categóricas a numéricas

--- a/notebooks/modelgeneration_27092023_ricalanis.ipynb
+++ b/notebooks/modelgeneration_27092023_ricalanis.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "48849a88",
    "metadata": {},
    "outputs": [
@@ -45,22 +45,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10000 entries, 0 to 9999\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 14 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   CreditScore      10000 non-null  int64  \n",
-      " 1   Geography        10000 non-null  object \n",
-      " 2   Gender           10000 non-null  object \n",
-      " 3   Age              10000 non-null  int64  \n",
-      " 4   Tenure           10000 non-null  int64  \n",
-      " 5   Balance          10000 non-null  float64\n",
-      " 6   NumOfProducts    10000 non-null  int64  \n",
-      " 7   HasCrCard        10000 non-null  int64  \n",
-      " 8   IsActiveMember   10000 non-null  int64  \n",
-      " 9   EstimatedSalary  10000 non-null  float64\n",
-      " 10  Exited           10000 non-null  int64  \n",
-      "dtypes: float64(2), int64(7), object(2)\n",
-      "memory usage: 859.5+ KB\n"
+      " 0   RowNumber        10000 non-null  int64  \n",
+      " 1   CustomerId       10000 non-null  int64  \n",
+      " 2   Surname          10000 non-null  object \n",
+      " 3   CreditScore      10000 non-null  int64  \n",
+      " 4   Geography        10000 non-null  object \n",
+      " 5   Gender           10000 non-null  object \n",
+      " 6   Age              10000 non-null  int64  \n",
+      " 7   Tenure           10000 non-null  int64  \n",
+      " 8   Balance          10000 non-null  float64\n",
+      " 9   NumOfProducts    10000 non-null  int64  \n",
+      " 10  HasCrCard        10000 non-null  int64  \n",
+      " 11  IsActiveMember   10000 non-null  int64  \n",
+      " 12  EstimatedSalary  10000 non-null  float64\n",
+      " 13  Exited           10000 non-null  int64  \n",
+      "dtypes: float64(2), int64(9), object(3)\n",
+      "memory usage: 1.1+ MB\n"
      ]
     }
    ],
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e6e35832-17f4-43b3-adcc-5de303725f8d",
    "metadata": {},
    "outputs": [
@@ -224,7 +227,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,13 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5227fa27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "RowNumber          0\n",
+       "CustomerId         0\n",
+       "Surname            0\n",
        "CreditScore        0\n",
        "Geography          0\n",
        "Gender             0\n",
@@ -265,7 +271,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3da27622-b70d-45bb-9efb-bd94bd4fb0a7",
    "metadata": {},
    "outputs": [],
@@ -403,8 +409,37 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7202aecb",
+   "metadata": {},
+   "source": [
+    "Se inicializa un diccionario vacío llamado column_equivalence. Este diccionario se utilizará más adelante para almacenar la equivalencia entre las categorías y los valores numéricos correspondientes.\n",
+    "\n",
+    "Se crea una lista llamada features que contiene los nombres de las columnas del dataset.\n",
+    "\n",
+    "Se itera sobre cada columna del dataset y se obtiene su tipo de dato. La función data.dtypes devuelve los tipos de datos de todas las columnas en forma de objeto pandas Series. El bucle for i, column in enumerate(list([str(d) for d in data.dtypes])): itera sobre esta Series y asigna a i el índice de la columna y a column el tipo de dato de esa columna convertido a cadena.\n",
+    "\n",
+    "Se verifica si el tipo de dato de la columna es \"object\", lo que indica que es una variable categórica. En caso afirmativo, se realiza el siguiente conjunto de pasos para convertirla a numérica:\n",
+    "\n",
+    "Se rellenan los valores faltantes de la columna con la moda, utilizando el método fillna con data[data.columns[i]].mode(). La moda es el valor más frecuente en la columna y se utiliza para sustituir los valores faltantes.\n",
+    "\n",
+    "Se convierte la columna categórica en un tipo de datos \"category\" mediante data[data.columns[i]].astype(\"category\").\n",
+    "\n",
+    "Se crea un diccionario llamado current_column_equivalence que asigna a cada valor categórico un número entero único. La función enumerate se utiliza para generar los pares de índice y valor categórico, y se guarda en current_column_equivalence.\n",
+    "\n",
+    "El diccionario column_equivalence[i] se actualiza con un diccionario invertido de current_column_equivalence, donde las claves son los valores categóricos y los valores son los números enteros. Esto se hace mediante dict((v,k) for k,v in current_column_equivalence.items()).\n",
+    "\n",
+    "Finalmente, se reemplaza la columna original con los códigos numéricos correspondientes utilizando categorical_column.cat.codes. Los códigos numéricos representan ahora las categorías en lugar de los valores originales.\n",
+    "\n",
+    "Si el tipo de dato de la columna no es \"object\", lo que indica que es una variable numérica, se rellenan los valores faltantes de la columna con la mediana utilizando data[data.columns[i]].median(). La mediana es el valor medio de la columna y se utiliza para sustituir los valores faltantes.\n",
+    "\n",
+    "En resumen, este código recorre cada columna del dataset y convierte las variables categóricas en numéricas utilizando el código de categoría correspondiente. Además, rellena los valores faltantes en ambas variables categóricas y numéricas. El diccionario column_equivalence almacena la equivalencia entre las categorías y los valores numéricos para su uso posterior si es necesario."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "c6519a08-642b-4ce3-8800-bfd80be89989",
    "metadata": {},
    "outputs": [],
@@ -434,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "698ccaf5",
    "metadata": {},
    "outputs": [
@@ -444,7 +479,7 @@
        "{1: {'France': 0, 'Germany': 1, 'Spain': 2}, 2: {'Female': 0, 'Male': 1}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ae952083",
    "metadata": {},
    "outputs": [
@@ -469,8 +504,8 @@
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
       " 0   CreditScore      10000 non-null  int64  \n",
-      " 1   Geography        10000 non-null  object \n",
-      " 2   Gender           10000 non-null  object \n",
+      " 1   Geography        10000 non-null  int8   \n",
+      " 2   Gender           10000 non-null  int8   \n",
       " 3   Age              10000 non-null  int64  \n",
       " 4   Tenure           10000 non-null  int64  \n",
       " 5   Balance          10000 non-null  float64\n",
@@ -479,8 +514,8 @@
       " 8   IsActiveMember   10000 non-null  int64  \n",
       " 9   EstimatedSalary  10000 non-null  float64\n",
       " 10  Exited           10000 non-null  int64  \n",
-      "dtypes: float64(2), int64(7), object(2)\n",
-      "memory usage: 859.5+ KB\n"
+      "dtypes: float64(2), int64(7), int8(2)\n",
+      "memory usage: 722.8 KB\n"
      ]
     }
    ],
@@ -545,7 +580,7 @@
    "id": "5e722491",
    "metadata": {},
    "source": [
-    "Conclusión: Exited está a la derecha. Tiene correlación de 1 consigo misma porque la relación es totalmente direta. Las variables inmediatamente a la izquierda, como la edad, el valance y la geografía son las que tienen una relación directa mayor. "
+    "Conclusión: Exited está a la derecha. Tiene correlación de 1 consigo misma porque la relación es totalmente directa. Las variables inmediatamente a la izquierda, como la edad, el balance y la geografía son las que tienen una relación directa mayor. "
    ]
   },
   {
